Add Youtube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/security-registry-wg/2019-10-23.md
+++ b/meeting-notes/security-registry-wg/2019-10-23.md
@@ -4,7 +4,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/REVe66UMZf8 |
 | Attending  |  |
 | Note Taker |  |
 
