Add Youtube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2019-10-30.md
+++ b/meeting-notes/2019-10-30.md
@@ -14,7 +14,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/vGXesWWWdjU |
 | Attending  | Justin Cormack. Radu Matei, Carolyn Van Slyck, Silvin Lubecki, Urvashi Reddy, Jacob LeGrone, Vaughn Dice, Jeremy Rickard |
 | Note Taker | Jeremy Rickard  |
 
