Add Youtube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-01-22.md
+++ b/meeting-notes/2020-01-22.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |   |
+| Recording  |  https://youtu.be/88fBb78H_oU |
 | Attending  | Jacob LeGrone, Matt Butcher, Radu Matei, Ralph Squillace, Carolyn Van Slyck, Vaughn Dice, Chris Crone |
 | Note Taker | Carolyn Van Slyck |
 
