Fix 2020-03-04 meeting notes
Signed-off-by: Christopher Crone <christopher.crone@docker.com>

--- a/meeting-notes/2020-03-04.md
+++ b/meeting-notes/2020-03-04.md
@@ -80,7 +80,7 @@
         - Radu: We could bundle the schema in thick bundles
             - Matt: Means we'd be asking bundle if it's valid
 - #285 meeting?
-    - Glyn is going to plan this
+    - ~Glyn~ Ralph/Chris is going to plan this
     - Will aim to do something morning time Pacific
 - Microsoft are using CNAB and have made some blog posts about them
     - https://blogs.endjin.com/2020/03/introducing-the-azure-cnab-quickstarts-library/
