Add Youtube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-02-19.md
+++ b/meeting-notes/2020-02-19.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  | TBD |
+| Recording  | https://youtu.be/7NwRgeLlshs |
 | Attending  | Silvin Lubecki, Carolyn Van Slyck, Radu Matei, Chris Crone, Jacob LeGrone, Vaughn Dice, Ben Whiting, Ralph Squillace, thomhane, Karen Chu, Trishank Karthik Kuppusamy |
 | Note Taker | Carolyn Cnabby Van Slyck |
 
