Add Youtube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/security-registry-wg/2020-02-26.md
+++ b/meeting-notes/security-registry-wg/2020-02-26.md
@@ -2,7 +2,7 @@
 
 |  |  |
 | -------- | -------- |
-| Recording  | |
+| Recording  | https://youtu.be/TSG4DF9gf_0 |
 | Attending  | Radu Matei, Chris Crone, Silvin Lubecki, Trishank Karthik Kuppusamy |
 | Note Taker | Trishank Karthik Kuppusamy |
 
