Adding YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-03-18.md
+++ b/meeting-notes/2020-03-18.md
@@ -2,7 +2,7 @@
 
 |            |                                                                                                                                                                      |
 | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Recording  | TBA                                                                                                                                                                  |
+| Recording  | https://youtu.be/vOzXPrDcang                                                                                                                                                                  |
 | Attending  | Ben Whiting, Carolyn Can Slyck, Tazin Progga, Silvin Lubecki, Glyn Normington, Ralph Squillace, Trishank Kappusami, Radu Matei, Karen Chu, Jacob LeGrone, Vaugh Dice |
 | Note Taker | Radu M                                                                                                                                                               |
 
