Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/security-registry-wg/2020-03-25.md
+++ b/meeting-notes/security-registry-wg/2020-03-25.md
@@ -1,6 +1,6 @@
 |            |                                                                   |
 | ---------- | ----------------------------------------------------------------- |
-| Recording  | TBA                                                               |
+| Recording  | https://youtu.be/wn2-oWx4qDw                                                               |
 | Attending  | Radu Matei, Trishank Karthik Kuppusamy, Chris Crone, Matt Butcher |
 | Note Taker | Trishank Karthik Kuppusamy                                        |
 
