Update link issue #188
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-04-01.md
+++ b/meeting-notes/2020-04-01.md
@@ -20,7 +20,7 @@
         * Chris: I see there are 3 LGTMs already.
         * Jacob: I didn't see the last update, I would like the chance to review this before it gets merged. We are building something that doesn't update the revision, but still allows the tracking of all actions.
         * Carolyn: Sure - this is an optional change.
-    * add schema validation in `cnab-go` - [#188](https://github.com/cnabio/cnab-go/pull/188
+    * add schema validation in `cnab-go` - [#188](https://github.com/cnabio/cnab-go/pull/188)
         * Vaughn: simple implementation of schema validation, now that CI generates schema. It is ready for a re-review now.
         * Chris: if you need another review, feel free to ping Silvin.
 * Update active checks required for merging -`validation` and `cnab-spec-validate` (Radu)
