Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-04-29.md
+++ b/meeting-notes/2020-04-29.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/a7lt2o5jUPU |
 | Attending  | Trishank Karthik Kuppusamy, Aditya Sirish, Chris Crone, Radu Matei, Matt Butcher, Carolyn Van Slyck, Vaughn Dice, Jacob LeGrone, Ralph Squillace, MChorfa |
 | Note Taker |  |
 
