Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-05-13.md
+++ b/meeting-notes/2020-05-13.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/D0fb43OUOm0 |
 | Attending  | Trishank Karthik Kuppusamy, Carolyn van Slyck, Silvin Lubecki, Vaughn Dice, Aditya Sirish, Ralph Squillace |
 | Note Taker | TKK |
 
