Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-05-27.md
+++ b/meeting-notes/2020-05-27.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/yuh4SuECb6Q |
 | Attending  | Carolyn Van Slyck, Vaughn Dice, Trishank Kuppusamy, Jacob LeGrone |
 | Note Taker | Radu Matei |
 
