Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-06-03.md
+++ b/meeting-notes/2020-06-03.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/4gpaGRdi_XU |
 | Attending  | Trishank Kuppusamy, Chris Crone, Radu Matei |
 | Note Taker |  |
 
