Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-06-10.md
+++ b/meeting-notes/2020-06-10.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/yW3jUycyHsc |
 | Attending  | Trishank Kuppusamy, Jeff Benson, Chris Crone, Vaughn Dice, Matt Butcher, Radu Matei |
 | Note Taker | Radu Matei |
 
