Update YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-06-24.md
+++ b/meeting-notes/2020-06-24.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  | TBD |
+| Recording  | https://youtu.be/IbsqUcTpVAU |
 | Attending  | Chris Crone, Carolyn Van Slyck, Radu Matei, Jacob LeGrone, Trishank Kuppusamy, Ralph Squillace, Tom Haney |
 | Note Taker | Carolyn Van Slyck |
 
