Add YouTube recording URL
Signed-off-by: Karen Chu <karen.chu@microsoft.com>

--- a/meeting-notes/2020-04-15.md
+++ b/meeting-notes/2020-04-15.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  |  |
+| Recording  | https://youtu.be/XGZSAcgbdaA |
 | Attending  | Chris Crone, Carolyn Van Slyck, Tom Haney, Trishank Karthik Kuppusamy, Silvin Lubecki, Ralph Squillace, Radu Matei, Matt Butcher, Jacob LeGrone |
 | Note Taker | Radu Matei |
 ### Agenda
