Add recording to Sept 30, 2020 meeting notes
Signed-off-by: Carolyn Van Slyck <me@carolynvanslyck.com>

--- a/meeting-notes/2020-09-30.md
+++ b/meeting-notes/2020-09-30.md
@@ -2,7 +2,7 @@
 
 |  |  | 
 | -------- | -------- |
-| Recording  | TBD |
+| Recording  | https://youtu.be/_q7N5f4tcCE |
 | Attending  | Jacob LeGrone, Matt Butcher, Carolyn Van Slyck, Radu Matei, Vaughn Dice, Simon Davies  |
 | Note Taker | Carolyn Van Slyck |
 
